update, fix loi frontend

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -4,5 +4,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclud": ["node_modules", "../backend/dist"]
+  "exclude": ["node_modules", "../backend/dist"]
 }
