--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,17 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.5.0",
     "socket.io-client": "^4.8.1",
+    "swiper": "^12.0.3",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1",
+    "vue3-carousel": "^0.17.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/cli-service": "^5.0.8",
-    "vite": "^6.2.4",
+    "vite": "^6.4.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
